--- a/test/wwwroot/css/site.css
+++ b/test/wwwroot/css/site.css
@@ -220,7 +220,7 @@ img {
 .prev, .next {
     cursor: pointer;
     position: absolute;
-    top: 50%;
+    top: 45%;
     width: auto;
     padding: 16px;
     margin-top: -22px;
@@ -230,6 +230,7 @@ img {
     transition: 0.6s ease;
     border-radius: 0 3px 3px 0;
     user-select: none;
+    background-color: rgba(0,0,0,0.8);
 }
 
 /* Position the "next button" to the right */
@@ -248,7 +249,6 @@ img {
     color: black;
     font-size: 15px;
     padding: 8px 12px;
-    position: absolute;
     bottom: 8px;
     width: 100%;
     text-align: center;
@@ -300,5 +300,12 @@ img {
 @media only screen and (max-width: 300px) {
     .prev, .next, .text {
         font-size: 11px
+    }
+}
+
+
+@media only screen and (max-width: 600px) {
+    .prev, .next {
+        top:30%;
     }
 }
