remove placeholde from search

--- a/test/Views/Shared/_Layout.cshtml
+++ b/test/Views/Shared/_Layout.cshtml
@@ -402,7 +402,7 @@
             <div class="d-flex">
 
                 <div style="position:relative; margin-right:5px; margin-top:5px;">
-                    <input name="searchWord" placeholder="საძიებო სიტყვა" id="searchWord" style="margin-left:5px; margin-top:0px; margin-bottom:5px;border-radius:20px; background-color:white;width: 250px; height:30px;border-color:transparent; outline:none" />
+                    <input name="searchWord" id="searchWord" style="margin-left:5px; margin-top:0px; margin-bottom:5px;border-radius:20px; background-color:white;width: 250px; height:30px;border-color:transparent; outline:none" />
                     <div style="position:absolute; right:0px; top:-1px;">
                         <a style="cursor:pointer">
 
