--- a/test/Views/Home/Index.cshtml
+++ b/test/Views/Home/Index.cshtml
@@ -312,22 +312,15 @@
 
                         <div class="card-transparent mb-2" style="margin-top:20px;">
                             <a href="@Url.Action("Index", "Home", new {category = 47, page = 1})" style=" text-decoration: none;">
-@*                                <img class="card-img-top side-card-size" src="/content/images/Blog.jpg" alt="Card image cap" style="height:150px;">
-*@                                <div class="card-body" style="background-color:#F8BF0C;border-radius:5px;">
-                                    <div>
-                                        <h4 style="text-align:center">Blog</h4>
-                                    </div>
-                                </div>
+                                <img class="card-img-top side-card-size" src="/content/images/Blogs.png" alt="Card image cap" style="height:200px;">
+                                
                             </a>
                         </div>
 
 
                         <div class="card-transparent mb-2" style="margin-top:20px;">
                             <a href="@Url.Action("Index", "Home", new {category = 48, page = 1})" style=" text-decoration: none;">
-@*                                <img class="card-img-top side-card-size" src="/content/images/Media.jpg" alt="Card image cap" style="height:150px;">
-*@                                <div class="card-body" style="background-color:#F22222;border-radius:5px;">
-                                    <h4 style="text-align:center">Videos</h4>
-                                </div>
+                                <img class="card-img-top" src="/content/images/Videos.png" alt="Card image cap" style="height:200px;">
                             </a>
                         </div>
                     </div>
