add facebook domain verification meta tag

--- a/test/Views/Shared/_Layout.cshtml
+++ b/test/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
 <html lang="en">
 <head>
 
+    <meta name="facebook-domain-verification" content="6v5xd84nny3mg2fu2xg89lk4nypzzn" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-DGET2J1N55"></script>
