--- a/test/Views/Home/Index.cshtml
+++ b/test/Views/Home/Index.cshtml
@@ -71,15 +71,15 @@
                 <button class="accordion" style="margin-left:20px;">
                         @if (Model.Culture == "uk")
                         {
-                            <a style="text-decoration: none; padding-left: 50px"><p class="textStyle">↓ @employmentDropdDown.MainCategory.NameUkrainian</p></a>
+                            <a style="text-decoration: none; padding-left: 50px"><p class="textStyle">@employmentDropdDown.MainCategory.NameUkrainian</p></a>
                         }
                         else if (Model.Culture == "en")
                         {
-                            <a style="text-decoration: none; padding-left: 50px"><p class="textStyle">↓ @employmentDropdDown.MainCategory.NameGeorgian</p></a>
+                            <a style="text-decoration: none; padding-left: 50px"><p class="textStyle">@employmentDropdDown.MainCategory.NameGeorgian</p></a>
                         }
                         else
                         {
-                            <a style="text-decoration: none; padding-left: 50px"><p class="textStyle">↓ @employmentDropdDown.MainCategory.NameEnglish</p></a>
+                            <a style="text-decoration: none; padding-left: 50px"><p class="textStyle">@employmentDropdDown.MainCategory.NameEnglish</p></a>
                         }
                 </button>
                 
