proper alignment of items on page

--- a/test/Views/Home/Index.cshtml
+++ b/test/Views/Home/Index.cshtml
@@ -349,7 +349,7 @@
                         }
 
                         <h1 style="text-align:center ">@h1_Title</h1>
-                        <div class="row" id="categoriesRow">
+                        <div class="row justify-content-center" id="categoriesRow">
                             @if(Model.ChosenCategoryId == 48)
                             {
                                 foreach (var post in @Model.Posts)
