--- a/test/Views/Home/Index.cshtml
+++ b/test/Views/Home/Index.cshtml
@@ -287,54 +287,25 @@
                         <div class="slideshow-container" style="margin-top:20px;">
 
                             <!-- Full-width images with number and caption text -->
-                            <div class="mySlides fade">
-                                <a href="@Url.Action("PostInternalPage", "Home", new { id = @Model.Posts[0].Id})" style=" text-decoration: none; color:black;">
-                                    <img src="data:image/png;base64,@Model.Posts[0].ThumbnailBase64" style="width:100%">
-                                    <div class="text">
-                                        @if (Model.Culture == "uk")
-                                        {
-                                            <p class="textFont"><b>@Model.Posts[0].UkrainianTitle</b></p>
-                                        }
-                                        else
-                                        {
-                                            <p class="textFont"><b>@Model.Posts[0].GeorgianTitle</b></p>
-                                        }
-                                    </div>
-                                </a>
-                            </div>
 
-                            <div class="mySlides fade">
-                                <a href="@Url.Action("PostInternalPage", "Home", new { id = @Model.Posts[1].Id})" style=" text-decoration: none; color:black;">
-                                    <img src="data:image/png;base64,@Model.Posts[1].ThumbnailBase64" style="width:100%">
-                                    <div class="text">
-                                        @if (Model.Culture == "uk")
-                                        {
-                                            <p class="textFont"><b>@Model.Posts[1].UkrainianTitle</b></p>
-                                        }
-                                        else
-                                        {
-                                            <p class="textFont"><b>@Model.Posts[1].GeorgianTitle</b></p>
-                                        }
-                                    </div>
-                                </a>
-                            </div>
-
-                            <div class="mySlides fade">
-                                <a href="@Url.Action("PostInternalPage", "Home", new { id = @Model.Posts[2].Id})" style=" text-decoration: none; color:black;">
-                                    <img src="data:image/png;base64,@Model.Posts[2].ThumbnailBase64" style="width:100%">
-                                    <div class="text">
-                                        @if (Model.Culture == "uk")
-                                        {
-                                            <p class="textFont"><b>@Model.Posts[2].UkrainianTitle</b></p>
-                                        }
-                                        else
-                                        {
-                                            <p class="textFont"><b>@Model.Posts[2].GeorgianTitle</b></p>
-                                        }
-                                    </div>
-                                </a>
-
-                            </div>
+                            @foreach(var post in Model.Posts)
+                            {
+                                <div class="mySlides fade">
+                                    <a href="@Url.Action("PostInternalPage", "Home", new { id = post.Id})" style=" text-decoration: none; color:black;">
+                                        <img src="data:image/png;base64,@post.ThumbnailBase64" style="width:100%">
+                                        <div class="text">
+                                            @if (Model.Culture == "uk")
+                                            {
+                                                <p class="textFont"><b>@post.UkrainianTitle</b></p>
+                                            }
+                                            else
+                                            {
+                                                <p class="textFont"><b>@post.GeorgianTitle</b></p>
+                                            }
+                                        </div>
+                                    </a>
+                                </div>
+                            }
 
                             <!-- Next and previous buttons -->
                             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
