Fix blogs and media page

--- a/test/Views/Shared/_Layout.cshtml
+++ b/test/Views/Shared/_Layout.cshtml
@@ -4,7 +4,11 @@
 @inject IStringLocalizer<SharedResources> SharedLocalizer
 @inject IHtmlLocalizer<SharedResources> SharedHtmlLocalizer
 
-
+@{
+    var baseUrl = "https://dopomoga.ge";
+    var urlMedia = $"{baseUrl}/Categories/Media/1";
+    var urlBlog = $"{baseUrl}/Categories/Blog/1";
+}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -310,7 +314,8 @@
                                     </li>
 
                                     <li class="nav-item" id="DesktopNavigationMenuBlog">
-                                        <a class="nav-link text-dark"  href="@Url.Action("Index", "Home", new {category = 47, page = 1})">
+                                        
+                                        <a class="nav-link text-dark"  href="@urlBlog">
                                            <p id="blogP" style="font-family: 'FiraGO-SemiBold' !important;
                                                                         font-size: 20px;
                                                                         font-style: normal;
@@ -325,7 +330,7 @@
                                     </li>
 
                                     <li class="nav-item" id="DesktopNavigationMenuMedia">
-                                        <a class="nav-link text-dark"  href="@Url.Action("Index", "Home", new {category = 48, page = 1})">
+                                        <a class="nav-link text-dark"  href="@urlMedia">
                                            <p id="mediaP" style="font-family: 'FiraGO-SemiBold' !important;
                                                                         font-size: 20px;
                                                                         font-style: normal;
@@ -357,7 +362,7 @@
                                                                         margin-left:20px">@SharedLocalizer["FAQ"]</p>
                                         </a>
 
-                                        <a class="nav-link text-dark" href="@Url.Action("Index", "Home", new {category = 47, page = 1})"  style="margin:auto" id="mobileNavigationBarBlog">
+                                        <a class="nav-link text-dark" href="@urlBlog"  style="margin:auto" id="mobileNavigationBarBlog">
                                             <p id="blogP" style="font-family: 'FiraGO-SemiBold' !important;
                                                                         font-size: 20px;
                                                                         font-style: normal;
@@ -370,7 +375,7 @@
                                                                         margin-left:-30px">@SharedLocalizer["Blog"]</p>
                                         </a>
 
-                                        <a class="nav-link text-dark"  href="@Url.Action("Index", "Home", new {category = 48, page = 1})" style="margin:auto" id="mobileNavigationBarMedia">
+                                        <a class="nav-link text-dark"  href="@urlMedia" style="margin:auto" id="mobileNavigationBarMedia">
                                             <p id="mediaP" style="font-family: 'FiraGO-SemiBold' !important;
                                                                         font-size: 20px;
                                                                         font-style: normal;
