show english category names without dashes

--- a/test/Views/Home/AboutUs.cshtml
+++ b/test/Views/Home/AboutUs.cshtml
@@ -58,7 +58,7 @@
                 }
                 else
                 {
-                    <a style="text-decoration: none; padding-left: 50px"><p class="textStyle">@employmentDropdDown.MainCategory.NameEnglish</p></a>
+                    <a style="text-decoration: none; padding-left: 50px"><p class="textStyle">@employmentDropdDown.MainCategory.NameEnglish.Replace("-"," ")</p></a>
                 }
             </button>
             <div class="panel">
@@ -77,7 +77,7 @@
                         }
                         else
                         {
-                        <a style="text-decoration: none; padding-left: 30px" href="@url"><p class="textStyleMobile">@category.CategoryEnglishName</p></a>
+                        <a style="text-decoration: none; padding-left: 30px" href="@url"><p class="textStyleMobile">@category.CategoryEnglishName.Replace("-"," ")</p></a>
                         }
                     </div>
                 }
