--- a/test/Views/Home/Index.cshtml
+++ b/test/Views/Home/Index.cshtml
@@ -81,7 +81,7 @@
                         }
                         else
                         {
-                            <a style="text-decoration: none; padding-left: 50px"><p class="textStyle">@employmentDropdDown.MainCategory.NameEnglish</p></a>
+                            <a style="text-decoration: none; padding-left: 50px"><p class="textStyle">@employmentDropdDown.MainCategory.NameEnglish.Replace("-"," ")</p></a>
                         }
                 </button>
                 
@@ -103,7 +103,7 @@
                             }
                             else
                             {
-                                <a style="text-decoration: none; padding-left: 50px" href="@url"><p class="textStyleMobile">@category.CategoryEnglishName</p></a>
+                                <a style="text-decoration: none; padding-left: 50px" href="@url"><p class="textStyleMobile">@category.CategoryEnglishName.Replace("-"," ")</p></a>
                             }
                         </div>
                     }
@@ -120,7 +120,7 @@
                             }
                             else
                             {
-                                <a style="text-decoration: none; padding-left: 50px" href="@url"><p class="textStyleMobile">@category.CategoryEnglishName</p></a>
+                                <a style="text-decoration: none; padding-left: 50px" href="@url"><p class="textStyleMobile">@category.CategoryEnglishName.Replace("-"," ")</p></a>
                             }
                         </div>
                     }
@@ -145,7 +145,7 @@
                             }
                             else
                             {
-                                <a style="text-decoration: none; padding-left: 50px" href="@url"><p class="textStyle">@category.CategoryEnglishName</p></a>
+                                <a style="text-decoration: none; padding-left: 50px" href="@url"><p class="textStyle">@category.CategoryEnglishName.Replace("-"," ")</p></a>
                             }
                         </div>
                     }
@@ -162,7 +162,7 @@
                             }
                             else
                             {
-                                <a style="text-decoration: none; padding-left: 50px" href="@url"><p class="textStyle">@category.CategoryEnglishName</p></a>
+                                <a style="text-decoration: none; padding-left: 50px" href="@url"><p class="textStyle">@category.CategoryEnglishName.Replace("-"," ")</p></a>
                             }
                         </div>
                     }
@@ -198,7 +198,7 @@
                                     }
                                     else
                                     {
-                                        <a style="text-decoration: none; padding-left: 20px" href="@url"><p class="textStyle">@category.CategoryEnglishName</p></a>
+                                        <a style="text-decoration: none; padding-left: 20px" href="@url"><p class="textStyle">@category.CategoryEnglishName.Replace("-"," ")</p></a>
                                     }
                                 </div>
                             }
@@ -215,7 +215,7 @@
                                     }
                                     else
                                     {
-                                        <a style="text-decoration: none; padding-left: 20px" href="@url"><p class="textStyle">@category.CategoryEnglishName</p></a>
+                                        <a style="text-decoration: none; padding-left: 20px" href="@url"><p class="textStyle">@category.CategoryEnglishName.Replace("-"," ")</p></a>
                                     }
                                 </div>
                             }
@@ -235,7 +235,7 @@
                         }
                         else
                         {
-                            <a style="text-decoration: none; padding-left: 50px"><p class="textStyle">@mainCategory.NameEnglish</p></a>
+                            <a style="text-decoration: none; padding-left: 50px"><p class="textStyle">@mainCategory.NameEnglish.Replace("-"," ")</p></a>
                         }
                     </button>
                     <div class="panel">
@@ -257,7 +257,7 @@
                                     }
                                     else
                                     {
-                                        <a style="text-decoration: none; padding-left: 50px" href="@url"><p class="textStyleMobile">@category.CategoryEnglishName</p></a>
+                                        <a style="text-decoration: none; padding-left: 50px" href="@url"><p class="textStyleMobile">@category.CategoryEnglishName.Replace("-"," ")</p></a>
                                     }
                                 </div>
                             }
@@ -274,7 +274,7 @@
                                     }
                                     else
                                     {
-                                        <a style="text-decoration: none; padding-left: 50px" href="@url"><p class="textStyleMobile">@category.CategoryEnglishName</p></a>
+                                        <a style="text-decoration: none; padding-left: 50px" href="@url"><p class="textStyleMobile">@category.CategoryEnglishName.Replace("-"," ")</p></a>
                                     }
                                 </div>
                             }
