--- a/test/Views/Home/Categories.cshtml
+++ b/test/Views/Home/Categories.cshtml
@@ -82,7 +82,7 @@
                         }
                         else
                         {
-                            <a style="text-decoration: none; padding-left: 50px"><p class="textStyle">@employmentDropdDown.MainCategory.NameEnglish</p></a>
+                            <a style="text-decoration: none; padding-left: 50px"><p class="textStyle">@employmentDropdDown.MainCategory.NameEnglish.Replace("-"," ")</p></a>
                         }
                 </button>
                 
@@ -104,7 +104,7 @@
                             }
                             else
                             {
-                                <a style="text-decoration: none; padding-left: 50px" href="@url"><p class="textStyleMobile">@category.CategoryEnglishName</p></a>
+                                <a style="text-decoration: none; padding-left: 50px" href="@url"><p class="textStyleMobile">@category.CategoryEnglishName.Replace("-"," ")</p></a>
                             }
                         </div>
                     }
@@ -121,7 +121,7 @@
                             }
                             else
                             {
-                                <a style="text-decoration: none; padding-left: 50px" href="@url"><p class="textStyleMobile">@category.CategoryEnglishName</p></a>
+                                <a style="text-decoration: none; padding-left: 50px" href="@url"><p class="textStyleMobile">@category.CategoryEnglishName.Replace("-"," ")</p></a>
                             }
                         </div>
                     }
@@ -146,7 +146,7 @@
                             }
                             else
                             {
-                                <a style="text-decoration: none; padding-left: 50px" href="@url"><p class="textStyle">@category.CategoryEnglishName</p></a>
+                                <a style="text-decoration: none; padding-left: 50px" href="@url"><p class="textStyle">@category.CategoryEnglishName.Replace("-"," ")</p></a>
                             }
                         </div>
                     }
@@ -163,7 +163,7 @@
                             }
                             else
                             {
-                                <a style="text-decoration: none; padding-left: 50px" href="@url"><p class="textStyle">@category.CategoryEnglishName</p></a>
+                                <a style="text-decoration: none; padding-left: 50px" href="@url"><p class="textStyle">@category.CategoryEnglishName.Replace("-"," ")</p></a>
                             }
                         </div>
                     }
@@ -199,7 +199,7 @@
                                     }
                                     else
                                     {
-                                        <a style="text-decoration: none; padding-left: 20px" href="@url"><p class="textStyle">@category.CategoryEnglishName</p></a>
+                                        <a style="text-decoration: none; padding-left: 20px" href="@url"><p class="textStyle">@category.CategoryEnglishName.Replace("-"," ")</p></a>
                                     }
                                 </div>
                             }
@@ -216,7 +216,7 @@
                                     }
                                     else
                                     {
-                                        <a style="text-decoration: none; padding-left: 20px" href="@url"><p class="textStyle">@category.CategoryEnglishName</p></a>
+                                        <a style="text-decoration: none; padding-left: 20px" href="@url"><p class="textStyle">@category.CategoryEnglishName.Replace("-"," ")</p></a>
                                     }
                                 </div>
                             }
@@ -236,7 +236,7 @@
                         }
                         else
                         {
-                            <a style="text-decoration: none; padding-left: 50px"><p class="textStyle">@mainCategory.NameEnglish</p></a>
+                            <a style="text-decoration: none; padding-left: 50px"><p class="textStyle">@mainCategory.NameEnglish.Replace("-"," ")</p></a>
                         }
                     </button>
                     <div class="panel">
@@ -258,7 +258,7 @@
                                     }
                                     else
                                     {
-                                        <a style="text-decoration: none; padding-left: 50px" href="@url"><p class="textStyleMobile">@category.CategoryEnglishName</p></a>
+                                        <a style="text-decoration: none; padding-left: 50px" href="@url"><p class="textStyleMobile">@category.CategoryEnglishName.Replace("-"," ")</p></a>
                                     }
                                 </div>
                             }
@@ -275,7 +275,7 @@
                                     }
                                     else
                                     {
-                                        <a style="text-decoration: none; padding-left: 50px" href="@url"><p class="textStyleMobile">@category.CategoryEnglishName</p></a>
+                                        <a style="text-decoration: none; padding-left: 50px" href="@url"><p class="textStyleMobile">@category.CategoryEnglishName.Replace("-"," ")</p></a>
                                     }
                                 </div>
                             }
