--- a/test/Views/Home/FAQ.cshtml
+++ b/test/Views/Home/FAQ.cshtml
@@ -56,7 +56,7 @@
                 }
                 else
                 {
-                    <a style="text-decoration: none; padding-left: 50px"><p class="textStyle">@employmentDropdDown.MainCategory.NameEnglish</p></a>
+                    <a style="text-decoration: none; padding-left: 50px"><p class="textStyle">@employmentDropdDown.MainCategory.NameEnglish.Replace("-"," ")</p></a>
                 }
             </button>
             <div class="panel">
@@ -75,7 +75,7 @@
                         }
                         else
                         {
-                        <a style="text-decoration: none; padding-left: 30px" href="@url"><p class="textStyleMobile">@category.CategoryEnglishName</p></a>
+                        <a style="text-decoration: none; padding-left: 30px" href="@url"><p class="textStyleMobile">@category.CategoryEnglishName.Replace("-"," ")</p></a>
                         }
                     </div>
                 }
@@ -93,7 +93,7 @@
                     }
                     else
                     {
-                        <a style="text-decoration: none; padding-left: 30px" href="@url"><p class="textStyle">@category.CategoryGeorgianName</p></a>
+                        <a style="text-decoration: none; padding-left: 30px" href="@url"><p class="textStyle">@category.CategoryGeorgianName.Replace("-"," ")</p></a>
                     }
                 </div>
             }
